--- a/src/App.css
+++ b/src/App.css
@@ -268,6 +268,9 @@ li {
 input {
   border: 0;
   border-bottom: 1px solid black;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -webkit-appearance: none;
   margin: 0 10px;
   padding-bottom: 5px;
   text-align: center;
